Add Eureka server and other updates